# hex

./: .gitignore  Cargo.toml  README.md
ReleaseMetaData/: GenerateIcon.command  ReleaseMac.command
ReleaseMetaData/Mac/: Info.plist  MakeMacOSApp.command
src/: debug.rs  health_plugin.rs  main.rs
