[package]
name = "Hex"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { version = "0.1.2", default-features = false, features = ["2d", "bevy_scene", "debug-plugin", "parallel", "f64", "parry-f64", "simd"] }
bevy = { version = "0.14.1", features = [] }
bevy_egui = "0.28.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"